# hotspray

./: README.md  hotspray.rosinstall
.kuka.hotspray_ur5_moveit_config/: .setup_assistant  package.xml
.kuka.hotspray_ur5_moveit_config/config/: fake_controllers.yaml  hotspray_description.srdf  ompl_planning.yaml  ros_controllers.yaml
.kuka.hotspray_ur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  hotspray_description_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  run_benchmark_ompl.launch  setup_assistant.launch  trajectory_execution.launch.xml
hotspray/: hotspray.rosinstall
hotspray_application/: CMakeLists.txt  package.xml
hotspray_application/data/meshs/: mesh_with_artifacts.ply  results_mesh.ply  scan00.ply
hotspray_application/data/scan/: default.poses copy.json  default.trajectory.bag  direct_start.poses.json  left_corner_start.json  old_distance.poses.json  scan00.poses.json  scan01.poses.json  scan02.poses.json  scan03.poses.json
hotspray_application/data/spray/: default.poses copy.json  default.poses.json  default.trajectory.bag  degree_255.poses.json  degree_45_to_190.poses.json  easy_upright.poses.json  new_default.poses.json
hotspray_application/include/: hotspray_application.h  hotspray_application.hpp
hotspray_application/launch/: create_scan_poses.launch  create_spray_poses.launch  gui.launch  hotspray_application.launch  load_scan_poses.launch  load_scan_trajectory.launch  load_spray_poses.launch  load_spray_trajectory.launch
hotspray_application/meshs/: 1b451319-40be-4f56-8338-b3599f64942c.html  4d6371a6-ec9a-4c5d-bd63-b770be9153ad.html  6a9095e7-cdf1-41c7-9bc5-8604993dda37.html  coil_partly.ply  cylinder.ply  seg.py
hotspray_application/poses/: coil.posearray.bag  easy_poses.posearray.bag  easy_poses2.posearray.bag  first.posearray.bag  hard_poses.posearray.bag  scan0.poses.json  test.posearray.bag
hotspray_application/src/: hotspray_application.cpp  hotspray_application_node.cpp  hotspray_utils.cpp
hotspray_application/trajectories/: ${scan_file_name}.bag  coil.bag  easy_poses.bag  easy_poses2.bag  first.bag  hard_poses.bag  scan0.trajectory.bag  scan1.trajectory.bag  scan2.trajectory.bag  scan3.trajectory.bag  test.bag  test.trajectory.bag
hotspray_bringup/: CMakeLists.txt  package.xml
hotspray_bringup/launch/: application_bringup.launch  hardware_bringup.launch  hotspray_tesseract.launch  hotspray_ur5_gazebo.launch  hotspray_ur5_moveit.launch  hotspray_yak.launch  rviz.launch  simulation_bringup.launch  test_gui.launch  utils_bringup.launch
hotspray_bringup/rviz/: rviz_config.rviz
hotspray_description/: CMakeLists.txt  package.xml
hotspray_description/urdf/: coil.urdf  coil_fixed.xacro  coil_spawn.urdf  hotspray_application.xacro  hotspray_camera.xacro  hotspray_extruder.xacro  hotspray_tool.xacro  hotspray_ur5_demo_test.xacro  hotspray_workcell.xacro  test_cylinder.urdf
hotspray_description/urdf/camera/: _d435.gazebo.xacro  _d435.urdf.xacro
hotspray_description/worlds/: box.world  empty.world  hotspray.world  ur5_robot_empty.wold  white_background.world  with_coil.world
hotspray_drivers/: CMakeLists.txt  README.md  package.xml
hotspray_drivers/.docker/: Dockerfile
hotspray_motion/: CMakeLists.txt  package.xml
hotspray_motion/config/: descartes_plan_profile.xml  hotspray_kinematics.yaml  scan_descartes_plan_profile.xml  scan_trajopt_default_composite_profle.xml  scan_trajopt_default_plan_profile.xml  spray_descartes_plan_profile.xml  spray_trajopt_default_composite_profle.xml  spray_trajopt_default_plan_profile.xml  trajopt_default_composite_profle.xml  trajopt_default_plan_profile.xml
hotspray_motion/config/scan/: scan_ompl_plan_profile.xml  scan_trajopt_freespace_default_composite_profle.xml  scan_trajopt_process_default_composite_profle.xml  scan_trajopt_process_default_plan_profile.xml
hotspray_motion/config/spray/: spray_ompl_freespace_plan_profile.xml  spray_ompl_plan_profile.xml  spray_ompl_start_plan_profile.xml  spray_ompl_transition_plan_profile.xml  spray_trajopt_freespace_default_composite_profle.xml  spray_trajopt_process_default_composite_profle.xml  spray_trajopt_process_default_plan_profile.xml
hotspray_motion/include/hotspray_motion/: hotspray_motion_config.hpp  hotspray_motion_server.h
hotspray_motion/launch/: debug.launch  hotspray_motion.launch  load_hotspray.launch
hotspray_motion/src/: .hotspray_motion_server.cpp  hotspray_motion_node.cpp  hotspray_motion_server.cpp
hotspray_msgs/: CMakeLists.txt  package.xml
hotspray_msgs/action/: ExecuteScanTrajectory.action
hotspray_msgs/srv/: GenerateScanTrajectory.srv  GenerateSprayTrajectory.srv  GenerateToolpath.srv
hotspray_toolpath/: CMakeLists.txt  package.xml
hotspray_toolpath/launch/: hotspray_toolpath_generator.launch  mesh_segmenter_node.launch  mesh_segmenter_server_client.launch
hotspray_toolpath/src/: notes  plane_slicer_raster_generator_node.cpp  rotation_slicer_raster_generator.ipynb
hotspray_ur5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hotspray_ur5_moveit_config/config/: fake_controllers.yaml  hotspray_description.srdf  hotspray_ur5_description_test.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
hotspray_ur5_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
hotspray_utils/: CMakeLists.txt  package.xml
hotspray_utils/include/hotspray_utils/: hotspray_utils.h
hotspray_utils/src/: hotspray_utils.cpp
