<?xml version="1.0"?>
<package format="2">
  <name>hotspray_application</name>
  <version>0.0.0</version>
  <description>Hotspray scan package</description>

  <author email="bier@xyz.de">Johannes Biermann</author>
  <maintainer email="bier@xyz.de">bierm4nn</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>interactive_markers</depend>
  <depend>geometric_shapes</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <depend>opw_kinematics</depend>


  <depend>roslib</depend>
  <depend>hotspray_msgs</depend>
  <depend>tubular_toolpath_creator</depend>
  <depend>hotspray_utils</depend>
  <depend>yaml-cpp</depend>
  <depend>message_generation</depend>



  <!-- <exec_depend>pluginlib</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <exec_depend>roslib</exec_depend>

  <build_export_depend>yaml-cpp</build_export_depend>
  <exec_depend>yaml-cpp</exec_depend>
   -->
  <!-- <exec_depend>hotspray_utils</exec_depend> -->


  
</package>
