<?xml version="1.0"?>
<package format="2">
  <name>hotspray_application</name>
  <version>1.0.0</version>
  <description>hotspray_application</description>

  <author email="Johannes.Biermann@Tutanota.com">Johannes Biermann</author>
  <maintainer email="Johannes.Biermann@Tutanota.com">Johannes Biermann</maintainer>


  <license>MIT License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>eigen</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>interactive_markers</depend>
  <depend>geometric_shapes</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rosbag</depend>
  <!-- <depend>opw_kinematics</depend> -->
  <depend>roslib</depend>
  <depend>hotspray_msgs</depend>
  <depend>tubular_toolpath_creator</depend>
  <depend>hotspray_utils</depend>
  <depend>yaml-cpp</depend>
  <depend>message_generation</depend>

</package>
