<?xml version="1.0"?>
<package format="2">
  <name>hotspray_bringup</name>
  <version>1.0.0</version>
  <description>The hotspray_bringup package</description>

  <author email="Johannes.Biermann@Tutanota.com">Johannes Biermann</author>
  <maintainer email="Johannes.Biermann@Tutanota.com">Johannes Biermann</maintainer>

  <license>MIT License</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>hotspray_ur5_moveit_config</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>

  <exec_depend>hotspray_description</exec_depend>
  
  
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros
        gazebo_model_path="${prefix}/models" />
  </export>
</package>
