<?xml version="1.0"?>
<package format="2">
  <name>hotspray_description</name>
  <version>0.0.0</version>
  <description>The hotspray_ur_description package</description>

  <author email="Johannes.Biermann@Tutanota.com">Johannes Biermann</author>
  <maintainer email="Johannes.Biermann@Tutanota.com">Johannes Biermann</maintainer>

  <license>MIT License</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  

  <export>
    <gazebo_ros
        gazebo_model_path="${prefix}/models" />
  </export>
</package>
