<?xml version="2.0"?>
<package format="2">
  <name>hotspray_motion</name>
  <version>0.1.0</version>

  <description>Motion Planning nodes and library for the CRS project</description>
  <maintainer email="jrgichodevel@gmail.com">ros-industrial</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!--depend>rosidl_default_generators</depend-->
  <depend>roslib</depend>

  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>crs_msgs</depend>
  <depend>control_msgs</depend>
  <depend>cartesian_trajectory_msgs</depend>

  <depend>tesseract_msgs</depend>
  <depend>tesseract</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_visualization</depend>

  <depend>message_runtime</depend>
  <depend>message_generation</depend>





  <depend>trajopt</depend>
  <depend>trajopt_utils</depend>
  <depend>trajopt_sco</depend>

  <!-- <depend>descartes_light</depend> -->
  <!-- <depend>descartes_ikfast</depend> -->
  <!-- <depend>descartes_samplers</depend> -->

  <depend>tf2</depend>
  
  <!-- <depend>iterative_spline_parameterization</depend> -->

  <!-- <depend>yaml_cpp_vendor</depend> -->
  <!-- <depend>action_msgs</depend> -->
  <depend>visualization_msgs</depend>

</package>



