<?xml version="1.0"?>
<package format="2">
  <name>hotspray_motion</name>
  <version>0.0.0</version>
  <description>The hotspray_motion package</description>
  <author email="Johannes.Biermann@Tutanota.com">Johannes Biermann</author>
  <maintainer email="Johannes.Biermann@Tutanota.com">Johannes Biermann</maintainer>
  
  <license>MIT License</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>crs_msgs</depend>
  <depend>control_msgs</depend>
  <depend>cartesian_trajectory_msgs</depend>

  <depend>tesseract_msgs</depend>
  <depend>tesseract</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_visualization</depend>
  <depend>tesseract_planning_server</depend>
  
  <depend>hotspray_utils</depend>

  <depend>message_runtime</depend>
  <depend>message_generation</depend>

  <depend>trajopt</depend>
  <depend>trajopt_utils</depend>
  <depend>trajopt_sco</depend>

  <depend>tf2</depend>

  <depend>visualization_msgs</depend>




  <!-- <build_depend>descartes_core</build_depend> -->
  <build_depend>descartes_moveit</build_depend>
  <build_depend>descartes_planner</build_depend>
  <build_depend>descartes_trajectory</build_depend>

  <!-- <exec_depend>descartes_core</exec_depend> -->
  <exec_depend>descartes_moveit</exec_depend>
  <exec_depend>descartes_planner</exec_depend>
  <exec_depend>descartes_trajectory</exec_depend>





  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
