<?xml version="1.0"?>
<package format="2">
  <name>hotspray_msgs</name>
  <version>1.0.0</version>
  <description>The hotspray_msgs package</description>
  <author email="Johannes.Biermann@Tutanota.com">Johannes Biermann</author>
  <maintainer email="Johannes.Biermann@Tutanota.com">Johannes Biermann</maintainer>
  <license>MIT License</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>noether_msgs</depend>
  <depend>trajectory_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>

  <exec_depend>message_runtime</exec_depend>
  <depend>pcl_msgs</depend>

</package>
