<?xml version="1.0"?>
<package format="2">
  <name>hotspray_toolpath</name>
  <version>0.0.0</version>
  <description>The noether package</description>
 <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  

  <depend>noether_conversions</depend>
  <depend>actionlib</depend>
  <depend>mesh_segmenter</depend>
  <exec_depend>noether</exec_depend>
  <depend>path_sequence_planner</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tool_path_planner</depend>
  <depend>vtk_viewer</depend>
  <depend>hotspray_msgs</depend>


</package>
