<?xml version="1.0"?>
<package format="2">
  <name>hotspray_utils</name>
  <version>0.0.0</version>
  <description>The noether_conversions package</description>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>trajectory_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>shape_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
