<?xml version="1.0"?>
<package format="2">
  <name>hotspray_utils</name>
  <version>1.0.0</version>
  <description>hotspray_utils</description>

  <author email="Johannes.Biermann@Tutanota.com">Johannes Biermann</author>
  <maintainer email="Johannes.Biermann@Tutanota.com">Johannes Biermann</maintainer>


  <license>MIT License</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>trajectory_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rosbag</depend>

</package>
